Update vector service, add Supabase security scripts, and privacy docs

--- a/backend/node-services/orchestrator/.env.example
+++ b/backend/node-services/orchestrator/.env.example
@@ -2,8 +2,16 @@
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Supabase Configuration (for vector storage)
+# Get these from your Supabase project settings
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
+# Privacy and Security Settings
+DATA_RETENTION_DAYS=365
+AUDIT_LOGGING_ENABLED=true
+ENCRYPTION_ENABLED=true
+EXPORT_PERMISSION_REQUIRED=false
 
 # Service Configuration
 PORT=3001
